# Mesh2Marker

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml
blender_addon/: __init__.py  blender_manifest.toml
core/: LICENSE  pyproject.toml
core/src/mesh2marker/: __init__.py  __main__.py  alignment.py  checks.py  cli.py  correspondence.py  generate.py  geometry.py  io.py  kinematics.py  linking.py  markers.py  mhr.py  models.py  morph.py  osim.py  procrustes.py  segment_align.py  validation.py  vocabulary.py
core/tests/: conftest.py  test_alignment.py  test_checks.py  test_contract_sync.py  test_correspondence.py  test_generate.py  test_geometry.py  test_io.py  test_kinematics.py  test_linking.py  test_markers.py  test_mhr.py  test_morph.py  test_osim.py  test_procrustes.py  test_segment_align.py  test_smoke.py  test_validation.py  test_zero_wheel.py
core/tests/fixtures/: minimal.osim
reference/: README.md  opensim_model.json
scripts/: extract_reference_model.py
