[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mesh2marker"
version = "0.0.0"
description = "Core logic for Mesh2Marker: map MHR mesh vertices to OpenSim anatomical markers and export a reusable correspondence file."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Florian Delaplace", email = "florian.delaplace@sportfx.ai" },
]
dependencies = [
    "numpy",
]

[project.scripts]
mesh2marker = "mesh2marker.cli:main"

[project.optional-dependencies]
validation = [
    "pydantic>=2",
]
dev = [
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mesh2marker"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
